syntax = "proto3";

package pb;

option go_package = "github.com/zarszz/go-grpc/pb";

message CreatePostRequest {
    string Title = 1;
    string Content = 2;
    string Image = 3;
    string User = 4;
  }
  
